--- a/dentist-website/src/components/Footer.css
+++ b/dentist-website/src/components/Footer.css
@@ -11,7 +11,7 @@
 
 .footer-content {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr;
   gap: 3rem;
   margin-bottom: 3rem;
 }
